text spacing fixed

--- a/style.css
+++ b/style.css
@@ -554,7 +554,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .text h1 {
     font-size:1.6em;
-    margin-bottom: 1em;
+    margin: 1em 0;
     word-spacing: -0.3em;
 }
 
@@ -574,11 +574,15 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .text ul {
     padding-left: 1em;
+    margin-bottom: 0.5em;
 }
 
 
 .textContainer{
     max-width: 620px;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
     
 }
 
